# RT2_Assignment1

./: README.md  bridge.sh  ros.sh  ros12.sh  ros2.sh  rt2_assignment1.ttt
assignment_interfaces/: CMakeLists.txt  mappings.yaml  package.xml
rt2_assignment1/launch/: sim2.launch  sim_copp.launch
rt2_assignment1_1/: CMakeLists.txt  package.xml
rt2_assignment1_1/action/: GoToPoint.action
rt2_assignment1_1/launch/: sim.launch
rt2_assignment1_1/scripts/: go_to_point_ac.py  user_interface.py
rt2_assignment1_1/src/: position_service.cpp  state_machine.cpp
rt2_assignment1_2/: CMakeLists.txt  package.xml
rt2_assignment1_2/launch/: ros2nodes_launch.py
rt2_assignment1_2/src/: position_service.cpp  state_machine.cpp
